--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: php
 
+dist: xenial
+
 php:
-  - 7.2
+  - 7.3
 
 sudo: false
 
 env:
   matrix:
-    - DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
+    - DB=mysql DB_DSN='mysql://root@127.0.0.1/cakephp_test?init[]=SET sql_mode = "STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
   global:
     - RUN_TESTS=1
 
