--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
 	},
 	"require": {
 		"php": ">=7.2",
-		"cakephp/plugin-installer": "*",
-		"intervention/image": "~2.5.1",
+		"intervention/image": "^2.5",
 		"cakephp/cakephp": "^4.0"
 	},
 	"require-dev": {
